--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -56,6 +56,9 @@
       ],
       "source": [
         "# GPU check\n",
+        "\n",
+        "# Your Goal: Maximize Accuracy\n",
+        "\n",
         "!pip install GPUtil\n",
         "!pip install neptune\n",
         "import neptune\n",
